--- a/counter-ram.qsf
+++ b/counter-ram.qsf
@@ -68,4 +68,30 @@ set_global_assignment -name EDA_TEST_BENCH_NAME segment_tb -section_id eda_simul
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id segment_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME segment_tb -section_id segment_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE segment_tb.vhd -section_id segment_tb -hdl_version VHDL_2008
+set_location_assignment PIN_R8 -to clk
+set_location_assignment PIN_E1 -to next_address
+set_location_assignment PIN_J15 -to previous_address
+set_location_assignment PIN_A15 -to o_bin_led[0]
+set_location_assignment PIN_L3 -to o_bin_led[7]
+set_location_assignment PIN_B1 -to o_bin_led[6]
+set_location_assignment PIN_F3 -to o_bin_led[5]
+set_location_assignment PIN_D1 -to o_bin_led[4]
+set_location_assignment PIN_A11 -to o_bin_led[3]
+set_location_assignment PIN_B13 -to o_bin_led[2]
+set_location_assignment PIN_A13 -to o_bin_led[1]
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
+set_location_assignment PIN_T10 -to o_hex_addr_led_lobyte[6]
+set_location_assignment PIN_P11 -to o_hex_addr_led_lobyte[5]
+set_location_assignment PIN_N12 -to o_hex_addr_led_lobyte[4]
+set_location_assignment PIN_N9 -to o_hex_addr_led_lobyte[3]
+set_location_assignment PIN_L16 -to o_hex_addr_led_lobyte[2]
+set_location_assignment PIN_R16 -to o_hex_addr_led_lobyte[1]
+set_location_assignment PIN_P15 -to o_hex_addr_led_lobyte[0]
+set_location_assignment PIN_R11 -to o_hex_addr_led_hibyte[6]
+set_location_assignment PIN_R10 -to o_hex_addr_led_hibyte[5]
+set_location_assignment PIN_P9 -to o_hex_addr_led_hibyte[4]
+set_location_assignment PIN_N11 -to o_hex_addr_led_hibyte[3]
+set_location_assignment PIN_K16 -to o_hex_addr_led_hibyte[2]
+set_location_assignment PIN_L15 -to o_hex_addr_led_hibyte[1]
+set_location_assignment PIN_P16 -to o_hex_addr_led_hibyte[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
