--- a/counter-ram.qsf
+++ b/counter-ram.qsf
@@ -80,18 +80,19 @@ set_location_assignment PIN_A11 -to o_bin_led[3]
 set_location_assignment PIN_B13 -to o_bin_led[2]
 set_location_assignment PIN_A13 -to o_bin_led[1]
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
-set_location_assignment PIN_T10 -to o_hex_addr_led_lobyte[6]
-set_location_assignment PIN_P11 -to o_hex_addr_led_lobyte[5]
-set_location_assignment PIN_N12 -to o_hex_addr_led_lobyte[4]
-set_location_assignment PIN_N9 -to o_hex_addr_led_lobyte[3]
-set_location_assignment PIN_L16 -to o_hex_addr_led_lobyte[2]
-set_location_assignment PIN_R16 -to o_hex_addr_led_lobyte[1]
-set_location_assignment PIN_P15 -to o_hex_addr_led_lobyte[0]
-set_location_assignment PIN_R11 -to o_hex_addr_led_hibyte[6]
-set_location_assignment PIN_R10 -to o_hex_addr_led_hibyte[5]
-set_location_assignment PIN_P9 -to o_hex_addr_led_hibyte[4]
-set_location_assignment PIN_N11 -to o_hex_addr_led_hibyte[3]
-set_location_assignment PIN_K16 -to o_hex_addr_led_hibyte[2]
-set_location_assignment PIN_L15 -to o_hex_addr_led_hibyte[1]
-set_location_assignment PIN_P16 -to o_hex_addr_led_hibyte[0]
+set_global_assignment -name VHDL_FILE segment_pkg.vhd
+set_location_assignment PIN_R11 -to o_hex_addr.lobyte[6]
+set_location_assignment PIN_R10 -to o_hex_addr.lobyte[5]
+set_location_assignment PIN_P9 -to o_hex_addr.lobyte[4]
+set_location_assignment PIN_N11 -to o_hex_addr.lobyte[3]
+set_location_assignment PIN_K16 -to o_hex_addr.lobyte[2]
+set_location_assignment PIN_L15 -to o_hex_addr.lobyte[1]
+set_location_assignment PIN_P16 -to o_hex_addr.lobyte[0]
+set_location_assignment PIN_T10 -to o_hex_addr.hibyte[6]
+set_location_assignment PIN_P11 -to o_hex_addr.hibyte[5]
+set_location_assignment PIN_N12 -to o_hex_addr.hibyte[4]
+set_location_assignment PIN_N9 -to o_hex_addr.hibyte[3]
+set_location_assignment PIN_L16 -to o_hex_addr.hibyte[2]
+set_location_assignment PIN_R16 -to o_hex_addr.hibyte[1]
+set_location_assignment PIN_P15 -to o_hex_addr.hibyte[0]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
